Kubernetes/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chat-app
  template:
    metadata:
      labels:
        app: chat-app
    spec:
      containers:
        - name: chat-app
          image: maliksaqiboffical12/chat-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
